--- a/ms/figures.Rmd
+++ b/ms/figures.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Climate data"
+title: "Manuscript figures"
 output: html_document
 editor_options: 
   chunk_output_type: console
@@ -8,7 +8,6 @@ editor_options:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
-library(cowplot)
 library(here)
 library(sf)
 library(rnaturalearth)
@@ -46,10 +45,10 @@ locs <- mutate(locs, species.latin = factor(species.latin,
                                                        "Pinus contorta")))
 st_bbox(locs)
 
-filter(locs, county == "Rogaland") %>% 
+filter(locs, county %in% c("Rogaland","Hordaland")) %>% 
   st_bbox()
-xlimits <- c(-70e3,10e3)
-ylimits <- c(6.51e6,6.62e6)
+xlimits <- c(-69e3,10e3)
+ylimits <- c(6.515e6,6.775e6)
 inset <- st_polygon(list(matrix(c(xlimits[1],ylimits[1],
                          xlimits[2],ylimits[1],
                          xlimits[2],ylimits[2],
@@ -70,17 +69,18 @@ inset2 <- st_polygon(list(matrix(c(xlimits2[1],ylimits2[1],
 
 g1 <- ggplot() +
   geom_sf(data = nor50, fill = "white") + 
+  geom_sf(data = norcities) +
+  geom_sf_text(data = norcities, aes(label = NAME), 
+               nudge_y = c(-3e4,3e4,4e4), 
+               nudge_x = c(0, 10e4, 0), size = 2) +
   geom_sf(data = locs, #st_jitter(locs, amount=5e3)
           mapping = aes(color = species.latin, shape = species.latin), 
-          show.legend = "point", size = 2, alpha = 0.7) +
+          show.legend = "point", size = 1.5, alpha = 0.6) +
   scale_shape_manual(values = c(15, 16, 17, 18)) +
-  geom_sf(data = inset, fill = NA, linetype = "longdash") + 
-  geom_sf(data = inset2, fill = NA, linetype = "longdash") + 
-  geom_sf(data = norcities) +
-  geom_sf_label(data = norcities, aes(label = NAME), nudge_y = 3e4, 
-                size = 2, label.padding = unit(0.15, "lines")) +
+  geom_sf(data = inset, fill = NA, linetype = "longdash", color = 'black') + 
+  geom_sf(data = inset2, fill = NA, linetype = "longdash", color = 'black') + 
   scale_color_brewer(palette="Dark2") +
-  coord_sf(xlim = c(-60e3,700e3), ylim = c(6.5e6,7.8e6)) +
+  coord_sf(xlim = c(-60e3,730e3), ylim = c(6.5e6,7.8e6)) +
   theme_minimal() +
   theme(legend.position = c(0.35,0.88), legend.title = element_blank(), 
         legend.text = element_text(face = "italic"),
@@ -90,9 +90,10 @@ g1 <- ggplot() +
 g2 <- ggplot() +
   geom_sf(data = nor10, fill = "white") + 
   geom_sf(data = norislands, fill = "white") + 
+  geom_sf(data = norcities) +
   geom_sf(data = locs, 
           mapping = aes(color = species.latin, shape = species.latin), 
-          show.legend = FALSE, size = 2, alpha = 0.9) + 
+          show.legend = FALSE, size = 2, alpha = 0.7) + 
   scale_shape_manual(values = c(15, 16, 17, 18)) +
   scale_color_brewer(palette="Dark2") +
   coord_sf(xlim = xlimits, ylim = ylimits, datum = NA) +
@@ -106,7 +107,7 @@ g3 <- ggplot() +
   geom_sf(data = norislands, fill = "white") + 
   geom_sf(data = locs, 
           mapping = aes(color = species.latin, shape = species.latin), 
-          show.legend = FALSE, size = 2, alpha = 0.9) + 
+          show.legend = FALSE, size = 2, alpha = 0.7) + 
   scale_shape_manual(values = c(15, 16, 17, 18)) +
   scale_color_brewer(palette="Dark2") +
   coord_sf(xlim = xlimits2, ylim = ylimits2, datum = NA) +
@@ -115,11 +116,11 @@ g3 <- ggplot() +
         panel.border = element_rect(color = "black", fill = NA, size=1),
         panel.background = element_rect(fill = "ghostwhite"))
 
-scalefactor <- 4
+scalefactor <- 3.6
 g2x <- diff(xlimits)
 g2y <- diff(ylimits)
 ggplot_build(g1)$layout$coord$limits
-xmax <- 720e3
+xmax <- 750e3
 ymin <- 6.45e6
 g12 <- g1 + 
   annotation_custom(ggplotGrob(g2), 
