--- a/ms/figures.Rmd
+++ b/ms/figures.Rmd
@@ -175,7 +175,7 @@ dev.off()
 png(filename = here('ms', 'figures', 'locality-example', 'WALD.png'),
     width = 10, height = 10, units = 'cm', res = 300)
 plot(meaasen["seeds.WALD"], main = 'WALD seed probability density', 
-     key.pos = 1, key.width = lcm(1.4), logz = TRUE)
+     key.pos = 1, key.width = lcm(1.4), logz = TRUE, at = c(-5,-4,-3))
 dev.off()
 
 png(filename = here('ms', 'figures', 'locality-example', 'T2.png'),
@@ -190,7 +190,6 @@ plot(meaasen["T4"], main = 'forest',
      key.pos = 1, key.width = lcm(1.4), nbreaks = 6)
 dev.off()
 ```
-
 
 # sessionInfo 
 
